fix: 测试代码格式自动校验

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-    <script crossorigin="anonymous" src="https://unpkg.com/@ffmpeg/ffmpeg@0.7.0/dist/ffmpeg.min.js"></script>
-    <script crossorigin="anonymous" src="https://unpkg.com/@ffmpeg/ffmpeg/dist/ffmpeg.min.js"></script>
+    <script
+      crossorigin="anonymous"
+      src="https://unpkg.com/@ffmpeg/ffmpeg@0.7.0/dist/ffmpeg.min.js"
+    ></script>
+    <script
+      crossorigin="anonymous"
+      src="https://unpkg.com/@ffmpeg/ffmpeg/dist/ffmpeg.min.js"
+    ></script>
   </body>
 </html>
