--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         border: 3px solid #4d7cff;
         border-top-color: transparent;
         border-radius: 50%;
-        animation: spinner .8s linear infinite;
+        animation: spinner 0.8s linear infinite;
       }
       .first-screen-loading-text {
         margin-top: 20px;
