--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vue-fabric-editor</title>
+    <title>vue-design-editor</title>
     <style>
       .first-screen-loading {
         width: 200px;
