--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>vue-design-editor</title>
+    <script
+      charset="UTF-8"
+      id="LA_COLLECT"
+      src="//sdk.51.la/js-sdk-pro.min.js"
+    ></script>
+    <script>
+      LA.init({ id: "3GODrnzUczsjYuJT", ck: "3GODrnzUczsjYuJT" });
+    </script>
     <style>
       .first-screen-loading {
         width: 200px;
