--- a/index.html
+++ b/index.html
@@ -4,13 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>vue-design-editor</title>
-    <script
-      charset="UTF-8"
-      id="LA_COLLECT"
-      src="//sdk.51.la/js-sdk-pro.min.js"
-    ></script>
     <script>
-      LA.init({ id: "3GODrnzUczsjYuJT", ck: "3GODrnzUczsjYuJT" });
+      !(function (p) {
+        "use strict";
+        !(function (t) {
+          var s = window,
+            e = document,
+            i = p,
+            c = "".concat(
+              "https:" === e.location.protocol ? "https://" : "http://",
+              "sdk.51.la/js-sdk-pro.min.js"
+            ),
+            n = e.createElement("script"),
+            r = e.getElementsByTagName("script")[0];
+          (n.type = "text/javascript"),
+            n.setAttribute("charset", "UTF-8"),
+            (n.async = !0),
+            (n.src = c),
+            (n.id = "LA_COLLECT"),
+            (i.d = n);
+          var o = function () {
+            s.LA.ids.push(i);
+          };
+          s.LA ? s.LA.ids && o() : ((s.LA = p), (s.LA.ids = []), o()),
+            r.parentNode.insertBefore(n, r);
+        })();
+      })({ id: "3GUVKKsqX1ttIKXk", ck: "3GUVKKsqX1ttIKXk" });
     </script>
     <style>
       .first-screen-loading {
